mention the related issue https://github.com/gradle/gradle/issues/18671